force-app/main/default/objects/Line_Item__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>