force-app/main/default/objects/Line_Item__c/fields/Internal_Price__c.field-meta.xml
<CustomField>
    <fullName>Internal_Price__c</fullName>
    <label>Internal Price</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>